(This file, CHANGES, lists fixes. See NEWS for new features and enhancements.)

2.5

  * Pathologically long-running PARAGRAPH commands are now stoppable (^-\).
  
  * Move modified flag '*' to end of status line to be easier to spot.
  
2.4

  * CLOSEDOC and QUIT (^Q and Alt-Q) now close string requesters just like Esc.

  * Macro calling macros are now stopped at an arbitrary depth of 32 calls.

  * Last command of a loaded macro w/o trailing new-line now works.

  * Vertical block selections where mark is below cursor select correct text.

  * Mark right of a tab no longer moves when you change tab size.

  * MARK and MARKVERT with no parameters always set rather than toggle the mark.

  * Cursor no longer goes to start of line when you change tab size.

  * A couple of operations in free form mode (joining the first line with
    the following one and deleting a block with an extreme beyond the end
    of file) should not cause crashes anymore.

  * AUTOCOMPLETE could sometimes insert an inadvertent trailing "*".

2.3

  * Fixed ridiculously old bug when copying a block and the marker is
    after the cursor.

  * Tweak to syntax file for java.

  * Changed build date in "About" to ISO YYYY-MM-DD format.

  * Tweak suspend to signal process group; reduce chance of apparent hang.

  * Instantaneous window resize works again.

  * Now we display an error message (instead of crashing or returning an
    I/O error) when a file is too large (>=2GiB).

  * We no longer set the buffer filename in case of I/O error.

2.2

  * Fixed memory allocation macros in regex code from glibc to work on systems
    that return NULL on zero-sized allocations.

  * In makefile, made explicit the dependencies for regex.o.

  * Fixed bug in "AdjustView R" that could push current character off screen.

  * Ensure tab size remains less than half the window width when the window
    changes size.

  * Fixed buggy out-of-memory handling when loading files.
